--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,5 +11,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration•$(buildConfiguration)
+- script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet-build$(buildConfiguration)'
